hphp/test/zend/good/tests/lang/bug24573.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/bug24573.php on line 6
